--- a/index.html
+++ b/index.html
@@ -140,4 +140,21 @@
         <div class="nav-card">
             <a href="subsystem3_fishing_strategy.html">
                 <h2>Fishing Strategy</h2>
-                <p>Operational tactics and
+                <p>Operational tactics and crew management</p>
+            </a>
+        </div>
+        
+        <!-- ADDED SYSTEM INTEGRATION CARD -->
+        <div class="nav-card">
+            <a href="system_integration.html">
+                <h2>System Integration</h2>
+                <p>How all components work together</p>
+            </a>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Lobster Fishing Optimization Project | System Engineering</p>
+    </div>
+</body>
+</html>
