--- a/subsystem3_fishing_strategy.html
+++ b/subsystem3_fishing_strategy.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
-    <title>System Integration | Lobster Fishing Optimization</title>
+    <title>Fishing Strategy | Lobster Fishing Optimization</title>
     <style type="text/css">
         body {
             font-family: 'Georgia', serif;
@@ -75,21 +75,18 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="title">System Integration</h1>
-        <p class="subtitle">How all components work together</p>
+        <h1 class="title">Fishing Strategy</h1>
+        <p class="subtitle">Operational tactics and crew management</p>
     </div>
 
     <div class="content">
-        <h2>Integrated System Overview</h2>
-        <p>For integration, we used linking variables and coupled variables to connect the subsystems:</p>
+        <h2>Subsystem Description</h2>
+        <p>The Fishing strategy Subsystem models the tradeoffs between fishing for different species. This subsystem captures real-world decision-making by incorporating license costs, current market prices, and realistic payment methods.</p>
         
-        <ul>
-            <li><strong>Business ↔ Boat Selection:</strong> Boat cost and maintenance feed into financial calculations</li>
-            <li><strong>Business ↔ Fishing Strategy:</strong> Revenue projections inform operational decisions</li>
-            <li><strong>Boat Selection ↔ Fishing Strategy:</strong> Vessel capabilities determine fishing capacity</li>
-        </ul>
+        <h2>Subsystem Modeling</h2>
+        <p>The subsystem optimizes across four design variables: target species, crew payment structure, operational hours, and equipment investment. Different target species require different equipment, licenses, work hours, and commute times.</p>
         
-        <p>The optimized solution effectively balances all system components to maximize profitability while maintaining operational feasibility.</p>
+        <!-- [Include all fishing strategy content] -->
     </div>
 
     <div class="nav-container">
@@ -112,15 +109,15 @@
             </a>
         </div>
         <div class="nav-card">
-            <a href="subsystem2_boat_selection.html">
-                <h2>Boat Selection</h2>
-                <p>Vessel specifications and performance</p>
+            <a href="subsystem1_business.html">
+                <h2>Business Model</h2>
+                <p>Financial analysis and revenue optimization</p>
             </a>
         </div>
         <div class="nav-card">
-            <a href="subsystem3_fishing_strategy.html">
-                <h2>Fishing Strategy</h2>
-                <p>Operational tactics and crew management</p>
+            <a href="system_integration.html">
+                <h2>System Integration</h2>
+                <p>How all components work together</p>
             </a>
         </div>
     </div>
