--- a/subsystem2_boat_selection.html
+++ b/subsystem2_boat_selection.html
@@ -1,28 +1,125 @@
 <html>
 <head>
-<meta content="text/html; charset=UTF-8" http-equiv="content-type">
-<style type="text/css">
-/* [PASTE ALL CSS STYLES FROM ORIGINAL FILE HERE] */
-</style>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+    <title>Boat Selection | Lobster Fishing Optimization</title>
+    <style type="text/css">
+        body {
+            font-family: 'Georgia', serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f9f9f9;
+        }
+        .header {
+            text-align: center;
+            padding: 30px 0;
+            border-bottom: 2px solid #3498db;
+            margin-bottom: 40px;
+        }
+        .title {
+            font-size: 36px;
+            color: #2c3e50;
+            margin-bottom: 10px;
+            font-weight: 700;
+        }
+        .content {
+            background: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            margin-bottom: 40px;
+        }
+        .nav-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin: 40px 0;
+        }
+        .nav-card {
+            width: 250px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+            overflow: hidden;
+        }
+        .nav-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+        }
+        .nav-card a {
+            display: block;
+            padding: 25px;
+            text-decoration: none;
+            color: inherit;
+        }
+        .nav-card h2 {
+            color: #3498db;
+            margin-top: 0;
+            font-size: 20px;
+        }
+        .diagram {
+            text-align: center;
+            margin: 30px 0;
+        }
+        .diagram img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 4px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+    </style>
 </head>
-<body class="c41 c59 doc-content">
-  <p class="c43"><span class="c30 c61">Lobster Fishing Optimization</span></p>
-  <p class="c24 c37"><span class="c7"></span></p>
-  <p class="c24"><span class="c7">Table of contents</span></p>
-  <ul class="c17 lst-kix_9uio28we7m26-0 start">
-    <li class="c20 li-bullet-0"><span class="c10"><a class="c39" href="system_introduction.html">System Introduction</a></span></li>
-    <li class="c20 li-bullet-0"><span class="c10"><a class="c39" href="subsystem1_business.html">Subsystem 1: Business</a></span></li>
-    <li class="c20 li-bullet-0"><span class="c10"><a class="c39" href="subsystem2_boat_selection.html">Subsystem 2: Boat Selection</a></span></li>
-    <li class="c20 li-bullet-0"><span class="c10"><a class="c39" href="subsystem3_fishing_strategy.html">Subsystem 3: Fishing Strategy</a></span></li>
-    <li class="c20 li-bullet-0"><span class="c10"><a class="c39" href="system_integration.html">System Integration</a></span></li>
-  </ul>
-  
-  <h1 class="c31" id="h.kcjcwgkglset"><span class="c11">Subsystem 2: Boat Selection</span></h1>
-  <h4 class="c32" id="h.squ1m36xhhyx"><span class="c9">Subsystem Description</span></h4>
-  <p class="c35"><span class="c7">Selecting the right lobster boat involves balancing competing priorities: fuel efficiency, storage capacity, seaworthiness, and cost. This subsystem models these tradeoffs using real-world data to replicate the decision-making process of a commercial fisherman. For instance, larger boats can carry more lobsters and gear but require bigger engines and consume more fuel. Similarly, hull design impacts performance in different ocean depths—planar hulls excel in shallow waters, while downeast hulls handle rougher, deeper seas but at a higher price. The subsystem's goal is to minimize annual fuel costs while ensuring the boat meets minimum capacity requirements and stays within budget constraints for both upfront purchase (&lt;$1.8M) and annual maintenance (&lt;$180K)</span></p>
-  
-  <!-- [CONTINUE WITH REST OF BOAT SELECTION SUBSYSTEM CONTENT] -->
-  <!-- Include all the Boat Selection subsystem content from the original file -->
-  
+<body>
+    <div class="header">
+        <h1 class="title">Boat Selection</h1>
+        <p class="subtitle">Vessel specifications and performance tradeoffs</p>
+    </div>
+
+    <div class="content">
+        <h2>Subsystem Description</h2>
+        <p>Selecting the right lobster boat involves balancing competing priorities: fuel efficiency, storage capacity, seaworthiness, and cost. This subsystem models these tradeoffs using real-world data to replicate the decision-making process of a commercial fisherman.</p>
+        
+        <h2>Subsystem Modeling</h2>
+        <p>The optimization considers four key variables: hull type, hull length, fuel type, and engine horsepower. All variables are discrete. Inputs from other subsystems help contextualize the problem.</p>
+        
+        <!-- [Include all boat selection content] -->
+    </div>
+
+    <div class="nav-container">
+        <div class="nav-card">
+            <a href="index.html">
+                <h2>Home</h2>
+                <p>Return to landing page</p>
+            </a>
+        </div>
+        <div class="nav-card">
+            <a href="system_introduction.html">
+                <h2>System Introduction</h2>
+                <p>Learn about our overall approach and system architecture</p>
+            </a>
+        </div>
+        <div class="nav-card">
+            <a href="subsystem1_business.html">
+                <h2>Business Model</h2>
+                <p>Financial analysis and revenue optimization</p>
+            </a>
+        </div>
+        <div class="nav-card">
+            <a href="subsystem3_fishing_strategy.html">
+                <h2>Fishing Strategy</h2>
+                <p>Operational tactics and crew management</p>
+            </a>
+        </div>
+        <div class="nav-card">
+            <a href="system_integration.html">
+                <h2>System Integration</h2>
+                <p>How all components work together</p>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
