--- a/system_introduction.html
+++ b/system_introduction.html
@@ -1,28 +1,130 @@
 <html>
 <head>
-<meta content="text/html; charset=UTF-8" http-equiv="content-type">
-<style type="text/css">
-/* [PASTE ALL CSS STYLES FROM ORIGINAL FILE HERE] */
-</style>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+    <title>System Introduction | Lobster Fishing Optimization</title>
+    <style type="text/css">
+        body {
+            font-family: 'Georgia', serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f9f9f9;
+        }
+        .header {
+            text-align: center;
+            padding: 30px 0;
+            border-bottom: 2px solid #3498db;
+            margin-bottom: 40px;
+        }
+        .title {
+            font-size: 36px;
+            color: #2c3e50;
+            margin-bottom: 10px;
+            font-weight: 700;
+        }
+        .content {
+            background: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            margin-bottom: 40px;
+        }
+        .nav-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin: 40px 0;
+        }
+        .nav-card {
+            width: 250px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+            overflow: hidden;
+        }
+        .nav-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+        }
+        .nav-card a {
+            display: block;
+            padding: 25px;
+            text-decoration: none;
+            color: inherit;
+        }
+        .nav-card h2 {
+            color: #3498db;
+            margin-top: 0;
+            font-size: 20px;
+        }
+        .diagram {
+            text-align: center;
+            margin: 30px 0;
+        }
+        .diagram img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 4px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+    </style>
 </head>
-<body class="c41 c59 doc-content">
-  <p class="c43"><span class="c30 c61">Lobster Fishing Optimization</span></p>
-  <p class="c24 c37"><span class="c7"></span></p>
-  <p class="c24"><span class="c7">Table of contents</span></p>
-  <ul class="c17 lst-kix_9uio28we7m26-0 start">
-    <li class="c20 li-bullet-0"><span class="c10"><a class="c39" href="system_introduction.html">System Introduction</a></span></li>
-    <li class="c20 li-bullet-0"><span class="c10"><a class="c39" href="subsystem1_business.html">Subsystem 1: Business</a></span></li>
-    <li class="c20 li-bullet-0"><span class="c10"><a class="c39" href="subsystem2_boat_selection.html">Subsystem 2: Boat Selection</a></span></li>
-    <li class="c20 li-bullet-0"><span class="c10"><a class="c39" href="subsystem3_fishing_strategy.html">Subsystem 3: Fishing Strategy</a></span></li>
-    <li class="c20 li-bullet-0"><span class="c10"><a class="c39" href="system_integration.html">System Integration</a></span></li>
-  </ul>
-  
-  <h1 class="c31" id="h.lqlzpke6ob49"><span class="c11">System Introduction</span></h1>
-  <p class="c24">
-    <span class="c30">For this project, we are optimizing the parameters for a successful 3 man lobster crew. We separate this system into three subsystems: 1) Business 2) Boat Selection 3) Fishing strategy. The Business subsystem controls the budget and expected profit. Boat selection finds the best boat with respect to fuel cost given the budget. This fuel cost is then added to the net present value calculation of the Business subsystem. Fishing strategy takes the boat parameters from Boat selection and calculates the expected cash inflow. This cash inflow is also used by the Business submodel to obtain net present value.</span>
-    <span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 609.50px; height: 413.75px;">
-      <img alt="" src="images/image53.png" style="width: 609.50px; height: 413.75px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title="">
-    </span>
-  </p>
+<body>
+    <div class="header">
+        <h1 class="title">System Introduction</h1>
+        <p class="subtitle">Lobster Fishing Optimization Project</p>
+    </div>
+
+    <div class="content">
+        <p>For this project, we are optimizing the parameters for a successful 3 man lobster crew. We separate this system into three subsystems:</p>
+        <ol>
+            <li><strong>Business</strong> - Controls the budget and expected profit</li>
+            <li><strong>Boat Selection</strong> - Finds the best boat with respect to fuel cost given the budget</li>
+            <li><strong>Fishing strategy</strong> - Calculates the expected cash inflow based on boat parameters</li>
+        </ol>
+        
+        <div class="diagram">
+            <img src="images/image53.png" alt="System Diagram">
+        </div>
+        
+        <p>The Business subsystem incorporates fuel cost into net present value calculations. Fishing strategy provides cash inflow data that the Business submodel uses to obtain net present value.</p>
+    </div>
+
+    <div class="nav-container">
+        <div class="nav-card">
+            <a href="index.html">
+                <h2>Home</h2>
+                <p>Return to landing page</p>
+            </a>
+        </div>
+        <div class="nav-card">
+            <a href="subsystem1_business.html">
+                <h2>Business Model</h2>
+                <p>Financial analysis and revenue optimization</p>
+            </a>
+        </div>
+        <div class="nav-card">
+            <a href="subsystem2_boat_selection.html">
+                <h2>Boat Selection</h2>
+                <p>Vessel specifications and performance</p>
+            </a>
+        </div>
+        <div class="nav-card">
+            <a href="subsystem3_fishing_strategy.html">
+                <h2>Fishing Strategy</h2>
+                <p>Operational tactics and crew management</p>
+            </a>
+        </div>
+        <div class="nav-card">
+            <a href="system_integration.html">
+                <h2>System Integration</h2>
+                <p>How all components work together</p>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
