Changed nav cards to six

--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
 
     <div class="nav-container">
         <div class="nav-card">
+            <a href="index.html">
+                <h2>Home</h2>
+                <p>Return to landing page</p>
+            </a>
+        </div>
+        <div class="nav-card">
             <a href="system_introduction.html">
                 <h2>System Introduction</h2>
                 <p>Learn about our overall approach and system architecture</p>
