--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <body>
     <div class="header">
         <h1 class="title">Lobster Fishing Optimization</h1>
-        <p> class="subtitle">Maximizing profitability through system engineering</p>
+        <p class="subtitle">Maximizing profitability through system engineering</p>
     </div>
 
     <div class="overview">
