--- a/system_introduction.html
+++ b/system_introduction.html
@@ -80,6 +80,7 @@
     </div>
 
     <div class="content">
+        <h2>System Architecture</h2>
         <p>For this project, we are optimizing the parameters for a successful 3 man lobster crew. We separate this system into three subsystems:</p>
         <ol>
             <li><strong>Business</strong> - Controls the budget and expected profit</li>
@@ -92,6 +93,19 @@
         </div>
         
         <p>The Business subsystem incorporates fuel cost into net present value calculations. Fishing strategy provides cash inflow data that the Business submodel uses to obtain net present value.</p>
+        
+        <h2>Assumptions</h2>
+        <p>For modeling purposes, we made the following assumptions</p>
+        <ul>
+            <li><strong>Maintenance</strong> - No major unexpected expenses during initial years of operation</li>
+            <li><strong>Fishing days</strong> - Weather remains the same</li>
+            <li><strong>Market price</strong> - Stable, predictable prices</li>
+            <li><strong>Lobster availability</strong> - Consistent, predictable supply of lobsters</li>
+            <li><strong>Boat Selection</strong> - Purchase based solely on financial factors, not personal satisfaction or lifestyle</li>
+            <li><strong>Lobster sell ratio</strong> - All lobsters caught can be sold at market price</li>
+            <li><strong>Lobster catch rate</strong> - Consistent haul per trip</li>
+        </ul>
+        <p>The most major assumptions made are that for maintenance and fishing days. Both are heavy concerns of every day fishermen. However, for the purposes of this model, we have decided to neglect them, as they force unpredictable elements into the model. </p>
     </div>
 
     <div class="nav-container">
